# Robotica_Echipa_Biela_Manivela

./: README.md
topicuri/: CMakeLists.txt  package.xml
topicuri/launch/: publisher.launch  subscriber.launch
topicuri/src/: client.py  publisher.py  server.py  subscriber.py
topicuri/srv/: CustomServMess.srv
