cmake_minimum_required(VERSION 3.0.2)
project(topicuri)

find_package(catkin REQUIRED COMPONENTS
  rospy
  std_msgs
  geometry_msgs
  message_generation
)

add_service_files(
  FILES
  CustomServMess.srv
)

generate_messages(
  DEPENDENCIES
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS rospy std_msgs geometry_msgs message_runtime
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS
  src/server.py
  src/client.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
